--- a/assets/styles/register.css
+++ b/assets/styles/register.css
@@ -22,8 +22,9 @@
 .register .intro {
     position: relative;
     text-align: center;
-    font-size: clamp(12px, 3vw, 15px);
+    font-size: clamp(11px, 3vw, 14px);
     color: var(--color-success);
+    padding: 0 15px;
 }
 
 .register form {
@@ -56,6 +57,27 @@
     outline: none;
     width: 100%;
     text-align: center;
+}
+
+.register form .terms {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.register form .terms .text {
+    font-size: clamp(11px, 3vw, 14px);
+    margin-right: 7px;
+}
+
+.register form .terms .text a {
+    color: var(--link-color);
+    text-decoration: none;
+}
+
+.register form .terms .text a:hover {
+    color: var(--link-hover-color);
 }
 
 .register form button {
